@@ -1,3 +1,7 @@
+2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* SymmetricTransform.cs: コンストラクタでIVをとるようにインターフェイスを変更
+
 2006-12-18 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* SymmetricTransform.cs: TransformBlockで入力データにオフセットが指定されていると
