@@ -1,3 +1,8 @@
+2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* CamelliaTransform.cs:
+	* CamelliaTransform64LE.cs: 基底クラスのコンストラクタインターフェイス変更に対応
+
 2006-12-10  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* CamelliaTransformLE.cs:
